--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,11 +21,15 @@ dependencies = [
     "pydantic-settings<3.0.0,>=2.2.1",
     "sentry-sdk[fastapi]<2.0.0,>=1.40.6",
     "pyjwt<3.0.0,>=2.8.0",
+    "langchain==0.3.21",
+    "langchain-anthropic==0.3.10",
+    "langchain-openai==0.3.9"
 ]
 
 [tool.uv]
 dev-dependencies = [
     "pytest<8.0.0,>=7.4.3",
+    "pytest-asyncio<1.0.0,>=0.23.5",
     "mypy<2.0.0,>=1.8.0",
     "ruff<1.0.0,>=0.2.2",
     "pre-commit<4.0.0,>=3.6.2",
