add basic proposal service

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,3 +1,6 @@
 [pytest]
-asyncio_mode = auto
-testpaths = app/tests 
+asyncio_mode = strict
+testpaths = app/tests
+norecursedirs = scripts
+exclude_patterns = scripts/test_proposal_api.py
+addopts = -p no:warnings 
